--- a/ui/main.glade
+++ b/ui/main.glade
@@ -74,6 +74,7 @@
               <object class="GtkComboBoxText" id="role_combo">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="active">0</property>
                 <items>Administrateur
 Membre
 Entraîneur</items>
