--- a/ui/main.glade
+++ b/ui/main.glade
@@ -74,10 +74,12 @@
               <object class="GtkComboBoxText" id="role_combo">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="active">0</property>
-                <items>Administrateur
-Membre
-Entraîneur</items>
+                <property name="active">1</property>
+                <items>
+                  <item translatable="no">Administrateur</item>
+                  <item translatable="no">Membre</item>
+                  <item translatable="no">Entraîneur</item>
+                </items>
               </object>
               <packing>
                 <property name="expand">False</property>
